Được tạo bằng Colaboratory

--- a/t_test.ipynb
+++ b/t_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "t-test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMw0Eua1GmoN5UwqQF2xiHp",
+      "authorship_tag": "ABX9TyMIoTsip+0padEiiPmkSudQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "2naAEqWKPriT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d809ca6a-4588-456d-c562-bf661fc65fa0"
+        "outputId": "7ffd8573-054b-4745-f4ca-9c2a25aa3180"
       },
       "outputs": [
         {
@@ -248,8 +248,8 @@
         "    \\end{align}\n",
         "\n",
         "với:\n",
-        "- Hệ số sig : 0,05  \n",
-        "- Chỉ số t tương ứng với hệ số sig/2 là : 1.984\n",
+        "- Hệ số alpha : 0,05  \n",
+        "- Chỉ số t tương ứng với hệ số alpha/2 là : 1.984\n",
         "\n",
         "\n"
       ],
@@ -278,16 +278,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TjUbWXx2uh62",
-        "outputId": "6b09c028-0c67-4e8e-d1ae-e36f59774c4a"
+        "outputId": "1a0f6a99-a759-44c9-daae-3d1fcd0efb1e"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[64.53148399 69.19726287 74.53220109 74.01179173 66.68127922 75.57439046\n",
-            " 66.52602775 67.64103596 67.05686661 72.60431799]\n"
+            "[75.18140876 68.91556617 70.53985074 66.33549091 62.45793413 66.71091919\n",
+            " 70.27575616 65.57420769 68.55650459 71.31754177]\n"
           ]
         }
       ]
@@ -304,16 +304,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KYM5ywnQud9f",
-        "outputId": "b485c020-e262-4083-8f15-46943a84421e"
+        "outputId": "faec1587-3198-4604-9502-dbc21b4736d3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[58.70681527 61.3743822  57.46192632 60.75241263 67.12401104 62.47002868\n",
-            " 66.5313561  65.08078623 70.17585291 65.43403128]\n"
+            "[63.87885731 56.15803913 67.40185404 59.8077974  68.71547589 62.05069321\n",
+            " 65.6189328  61.01155277 70.31101093 58.0191665 ]\n"
           ]
         }
       ]
@@ -323,7 +323,7 @@
       "source": [
         "#Kiểm định giả thuyết \n",
         "alpha = 0.05\n",
-        "t_test, p_value,df = ttest_ind(x1 = samples_1, x2 = samples_2, value = 69.3-63.8 , alternative = 'smaller')\n",
+        "t_test, p_value,df = ttest_ind(x1 = samples_1, x2 = samples_2, value = 69.3-63.8 , alternative = 'two-sided')\n",
         "print('t = ', t_test, '; p = ', p_value)\n",
         "if(p_value <  alpha):\n",
         "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
@@ -335,15 +335,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ARJlYiE4uoHG",
-        "outputId": "1a19fd40-8ff7-459d-c1eb-b3b07a8ab38b"
+        "outputId": "ebad8f94-3b24-4e8f-ee82-44100f6a2217"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "t =  -0.30031288615898843 ; p =  0.38228731644769903\n",
+            "t =  1.9331037243147964 ; p =  0.05610964777375643\n",
             "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
           ]
         }
