Được tạo bằng Colaboratory

--- a/t_test.ipynb
+++ b/t_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "t-test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIoTsip+0padEiiPmkSudQ",
+      "authorship_tag": "ABX9TyMxfBrZuS4/k3jwMTYjqOQS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "2naAEqWKPriT",
         "colab": {
@@ -130,8 +130,8 @@
         "$$H_a : \\mu < 66,5$$\n",
         "\n",
         "với:\n",
-        "- Hệ số sig : 0,05  \n",
-        "- Chỉ số t tương ứng với hệ số sig/2 là : 1.984\n",
+        "- Hệ số alpha : 0,05  \n",
+        "- Chỉ số t tương ứng với hệ số alpha/2 là : 1.984\n",
         "\n",
         "Công thức:  \n",
         "$$t = \\frac{(\\overline{\\rm X} - \\mu_0)}{(s / \\sqrt{n})}$$\n",
@@ -280,7 +280,7 @@
         "id": "TjUbWXx2uh62",
         "outputId": "1a0f6a99-a759-44c9-daae-3d1fcd0efb1e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
         "id": "KYM5ywnQud9f",
         "outputId": "faec1587-3198-4604-9502-dbc21b4736d3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +337,7 @@
         "id": "ARJlYiE4uoHG",
         "outputId": "ebad8f94-3b24-4e8f-ee82-44100f6a2217"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
