--- a/baitap_kiem_dinh_z_t.ipynb
+++ b/baitap_kiem_dinh_z_t.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "baitap_kiem_dinh_z-t.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPtKiaCv//WfpfjHoOGQRAQ",
+      "authorship_tag": "ABX9TyMiZ89b9+GJlSvZJ8Eg7fWs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43bc7ab6-4eec-4693-853c-b3be92755cb6"
+        "outputId": "0dfcdf2d-0bae-45e0-fc0b-f4edabbe7e1e"
       },
       "execution_count": 2,
       "outputs": [
@@ -193,7 +193,7 @@
         },
         "outputId": "4b02212d-f639-4f92-9668-5c9cdb0886de"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
       "metadata": {
         "id": "aXEiFPf1zVud"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "id": "w8dS3ALHzhO4",
         "outputId": "47b8dd19-7f0f-4c8d-ecde-d407a65dd555"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +283,7 @@
         "id": "1gGv4p1j0LDk",
         "outputId": "3f9fc4ee-fd35-4e9e-c235-4931fae8262d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "mlWZtUAOz7pA"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
         "id": "FFwsqz-Z1F72",
         "outputId": "0456a180-ed06-407a-c197-7cf92860ce86"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
         "id": "b-ZcN96M2UQo",
         "outputId": "1fecfb36-9fb7-4e40-bc20-0e9ce7a50a20"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +397,7 @@
       "metadata": {
         "id": "5DLkg4sx2YpE"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
         "id": "b0M7kmFh2buz",
         "outputId": "7781976e-6ac2-499c-9a06-00b8c8a67714"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "id": "DtSCSyz35opt",
         "outputId": "2dc6aa7e-ac23-4a4e-ca68-65ff76346be9"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
       "metadata": {
         "id": "VB8EAhar5xzb"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
         "id": "EFebmVut5zId",
         "outputId": "268684c6-1fb4-458f-fa3e-ae7273d49d9d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +556,7 @@
         "id": "dbHp935U7lkZ",
         "outputId": "ee22e913-11b4-42f0-fdcf-eed504b9e15f"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +577,7 @@
       "metadata": {
         "id": "IrIXF9Rv8ugg"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -594,7 +594,7 @@
         "id": "Pudxh6ym80wJ",
         "outputId": "49c0c527-4bb0-4e97-cf0f-39c81a282298"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         "id": "HytCoq42-kzG",
         "outputId": "c61212e5-995c-4828-8d09-0b7a7b3a7304"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "nEm-H2Ys-pBp"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -681,7 +681,7 @@
         "id": "MoeLtNOn-sHZ",
         "outputId": "baaadca8-e1ad-4b1e-ce1a-ab5ba4eadd4e"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
         "id": "7Bc-1ni6_Tx5",
         "outputId": "eb74e075-e01f-4629-b445-2e6d803a1789"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +769,7 @@
         "id": "GvGfXdWy_hEz",
         "outputId": "597db476-69b8-42ff-9f1f-e52d16906a22"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +818,7 @@
         "id": "qEEEMzn6ALQq",
         "outputId": "6beaeddc-73d4-4066-9dad-1b85b98443dc"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
       "metadata": {
         "id": "Cijbk8-DAWqX"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -860,7 +860,7 @@
         "id": "RRNuadaPAqHe",
         "outputId": "a6f150e4-1dd7-443a-d7dc-d4b98959d136"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,16 +908,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EFBdDQFMBWZT",
-        "outputId": "42e655d6-5a0d-4fbb-e963-b54f6fb8bbf7"
+        "outputId": "b88ecdf6-853a-4827-81e4-ddf377d62fe1"
       },
-      "execution_count": 50,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[3.29731779 3.31702843 3.28569202 3.22942251 3.05140045 2.98101361\n",
-            " 3.31667926 3.20191941 3.19713905 3.1787285 ]\n"
+            "[3.32236768 3.42275951 3.1275774  3.1986546  3.32242753 3.22378589\n",
+            " 2.95625983 3.17589853 3.12388897 3.07381007]\n"
           ]
         }
       ]
@@ -926,13 +926,13 @@
       "cell_type": "code",
       "source": [
         "#Xác định các thông số\n",
-        "null_mean = 3,25\n",
+        "null_mean = 3.25\n",
         "alpha = 0.01 "
       ],
       "metadata": {
         "id": "3hlZT20mBYvy"
       },
-      "execution_count": 54,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -947,23 +947,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 262
+          "base_uri": "https://localhost:8080/"
         },
         "id": "su72NInDBbCc",
-        "outputId": "10e9b847-53d7-4974-ea52-7d1f047905d9"
+        "outputId": "1c96f260-f62f-45cd-87a8-efb48749714a"
       },
-      "execution_count": 57,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-57-4556d347bce4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Kiểm định z\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mztest_Score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_value\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mztest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnull_mean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malternative\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'larger'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_value\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Có bằng chứng để bác bỏ giả thuyết H0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -1006,7 +1001,7 @@
         "id": "Lnh1PISODaEp",
         "outputId": "b75268a5-4881-470d-f7b2-8ecee54946b9"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,7 +1023,7 @@
       "metadata": {
         "id": "tN6Lza5NDaOm"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1043,7 @@
         "id": "AQ_fORlVDaWd",
         "outputId": "74c9edc0-42fd-4c6e-e188-a498d86f7286"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1092,7 +1087,7 @@
       "metadata": {
         "id": "DOzb-WpVEM74"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1125,7 +1120,7 @@
         "id": "BC1raWaPENL7",
         "outputId": "cfaf1878-60cb-4baa-d417-326badf03ee0"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
