Được tạo bằng Colaboratory

--- a/kiem_dinh_t.ipynb
+++ b/kiem_dinh_t.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "t-test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPoW7Rf2E6zpgvZhNEZg1U/",
+      "authorship_tag": "ABX9TyOmYOr0SuO0LPgUJTgXlRDN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d791a108-4df4-4ca8-e400-8f9efefb295d"
+        "outputId": "4626e71d-a860-42f6-c210-c7bb1b2ef72f"
       },
       "outputs": [
         {
@@ -175,7 +175,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x_4JVkUeo0K6",
-        "outputId": "ee73da3a-c051-4036-db6b-60689280ea2f"
+        "outputId": "f3eb3ea4-2224-40e7-c205-fcc2f0dd61a2"
       },
       "execution_count": 2,
       "outputs": [
@@ -183,8 +183,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[73.40085485 61.59652266 65.18715907 65.07050011 69.17448808 69.67393799\n",
-            " 63.49103138 66.32233634 63.78121698 65.24303754]\n"
+            "[68.40179571 68.21291725 79.85835817 65.36602734 65.01788099 74.88025313\n",
+            " 71.67732474 69.49547648 67.1465293  70.51166274]\n"
           ]
         }
       ]
@@ -193,7 +193,7 @@
       "cell_type": "code",
       "source": [
         "#Xác định các thông số\n",
-        "null_mean = 100\n",
+        "null_mean = 66.5 \n",
         "alpha = 0.05"
       ],
       "metadata": {
@@ -218,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "borYHBD8qNIP",
-        "outputId": "a31d1299-94d2-4fdc-fee2-e7e1a40f620d"
+        "outputId": "7ad7c593-184b-4ec2-824a-c8f4ffcee83d"
       },
       "execution_count": 6,
       "outputs": [
@@ -226,8 +226,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "p_value:  2.0963766193630325e-25\n",
-            "Có bằng chứng để bác bỏ giả thuyết H0\n"
+            "p_value:  0.8644940842480325\n",
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -280,7 +280,7 @@
         "id": "TjUbWXx2uh62",
         "outputId": "31140e37-80df-414b-e7b8-a39e4a3fc742"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
         "id": "KYM5ywnQud9f",
         "outputId": "fdc2a6e1-e881-4bca-e08a-e253a406daf4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +337,7 @@
         "id": "ARJlYiE4uoHG",
         "outputId": "7be2d103-466a-4bec-d396-3e99481b5fcd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
