--- a/huong_dan_gia_dinh_ANOVA.ipynb
+++ b/huong_dan_gia_dinh_ANOVA.ipynb
@@ -134,9 +134,9 @@
         "stats, pvalue = st.shapiro(sample_1)\n",
         "print(\"p_value:\",pvalue)\n",
         "if pvalue < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ]
     },
     {
@@ -146,9 +146,9 @@
         "stats, pvalue = st.shapiro(sample_2)\n",
         "print(\"p_value:\",pvalue)\n",
         "if pvalue < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -223,9 +223,9 @@
         "stat, pvalue = st.levene(sample_1, sample_2)\n",
         "print(\"p_value:\",pvalue)\n",
         "if pvalue < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết Phương sai của các nhóm không khác nhau\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết Phương sai của các nhóm không khác nhau\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ]
     }
   ],
