--- a/huong_dan_gia_dinh_ANOVA.ipynb
+++ b/huong_dan_gia_dinh_ANOVA.ipynb
@@ -164,7 +164,7 @@
           "name": "stdout",
           "text": [
             "p_value: 8.264779971511871e-10\n",
-            "Có bằng chứng bác bỏ mẫu lấy từ phân phối chuẩn\n"
+            "Có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -214,7 +214,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.32830031054984377\n",
-            "Không có bằng chứng bác bỏ giả thuyết Phương sai của các nhóm không khác nhau\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ],
