--- a/huong_dan_gia_dinh_ANOVA.ipynb
+++ b/huong_dan_gia_dinh_ANOVA.ipynb
@@ -125,7 +125,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.6734142899513245\n",
-            "Không có bằng chứng bác bỏ mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ],
