--- a/bai_tap_phan_tich_anova_1chieu.ipynb
+++ b/bai_tap_phan_tich_anova_1chieu.ipynb
@@ -668,9 +668,9 @@
         "stats, p_value = st.shapiro(df1[\"X1\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -686,7 +686,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.9960364103317261\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -697,9 +697,9 @@
         "stats, p_value = st.shapiro(df1[\"X2\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -715,7 +715,7 @@
           "name": "stdout",
           "text": [
             "p_value: 1.0\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -726,9 +726,9 @@
         "stats, p_value = st.shapiro(df1[\"X3\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -744,7 +744,7 @@
           "name": "stdout",
           "text": [
             "p_value: 1.0\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -755,9 +755,9 @@
         "stats, p_value = st.shapiro(df1[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -773,7 +773,7 @@
           "name": "stdout",
           "text": [
             "p_value: 1.0\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -810,9 +810,9 @@
         "stats, p_value = st.bartlett(df1[\"X1\"], df1[\"X2\"], df1[\"X3\"], df1[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -828,7 +828,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.48620382137845997\n",
-            "Không có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -1188,9 +1188,9 @@
         "stats, p_value = st.shapiro(df2[\"X1\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1206,7 +1206,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.644533634185791\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -1217,9 +1217,9 @@
         "stats, p_value = st.shapiro(df2[\"X2\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1235,7 +1235,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.7472830414772034\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -1246,9 +1246,9 @@
         "stats, p_value = st.shapiro(df2[\"X3\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1264,7 +1264,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.3169650137424469\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -1275,9 +1275,9 @@
         "stats, p_value = st.shapiro(df2[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1293,7 +1293,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.5994704365730286\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -1304,9 +1304,9 @@
         "stats, p_value = st.shapiro(df2[\"X5\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1322,7 +1322,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.803491473197937\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -1359,9 +1359,9 @@
         "stats, p_value = st.bartlett(df2[\"X1\"], df2[\"X2\"], df2[\"X3\"], df2[\"X4\"],df2[\"X5\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1377,7 +1377,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.825688088344803\n",
-            "Không có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -1952,9 +1952,9 @@
         "stats,p_value = st.shapiro(df3[\"X1\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1970,7 +1970,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.8542101979255676\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -1981,9 +1981,9 @@
         "stats,p_value = st.shapiro(df3[\"X2\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng để bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng để bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -1999,7 +1999,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.8434385061264038\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -2010,9 +2010,9 @@
         "stats,p_value = st.shapiro(df3[\"X3\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng để bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng để bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2028,7 +2028,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.3321065306663513\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ giả thuyết H0\n"
           ]
         }
       ]
@@ -2039,9 +2039,9 @@
         "stats,p_value = st.shapiro(df3[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng để bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng để bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2057,7 +2057,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.14956821501255035\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -2094,9 +2094,9 @@
         "stats, p_value = st.bartlett(df3[\"X1\"], df3[\"X2\"], df3[\"X3\"], df3[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2112,7 +2112,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.023106804849423433\n",
-            "Có bằng chứng bác bỏ giả thuyết phương sai các nhóm bằng nhau\n"
+            "Có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -2719,9 +2719,9 @@
         "stats, p_value = st.shapiro(df4[\"X1\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2737,7 +2737,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.9062873125076294\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
