--- a/bai_tap_phan_tich_anova_1chieu.ipynb
+++ b/bai_tap_phan_tich_anova_1chieu.ipynb
@@ -2748,9 +2748,9 @@
         "stats, p_value = st.shapiro(df4[\"X2\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2766,7 +2766,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.5765353441238403\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -2777,9 +2777,9 @@
         "stats, p_value = st.shapiro(df4[\"X3\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2795,7 +2795,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.3917592167854309\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -2806,9 +2806,9 @@
         "stats, p_value = st.shapiro(df4[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2824,7 +2824,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.5785742998123169\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -2835,9 +2835,9 @@
         "stats, p_value = st.shapiro(df4[\"X5\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -2853,7 +2853,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.012689383700489998\n",
-            "Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -3239,9 +3239,9 @@
         "stats, p_value = st.shapiro(df5[\"X1\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -3257,7 +3257,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.028549334034323692\n",
-            "Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -3268,9 +3268,9 @@
         "stats, p_value = st.shapiro(df5[\"X2\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -3286,7 +3286,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.16341625154018402\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -3297,9 +3297,9 @@
         "stats, p_value = st.shapiro(df5[\"X3\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -3315,7 +3315,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.6627115607261658\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -3326,9 +3326,9 @@
         "stats, p_value = st.shapiro(df5[\"X4\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -3344,7 +3344,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.06506332755088806\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
@@ -3355,9 +3355,9 @@
         "stats, p_value = st.shapiro(df5[\"X5\"])\n",
         "print(\"p_value:\",p_value)\n",
         "if p_value < 0.05:\n",
-        "  print(\"Có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")\n",
+        "  print(\"Có bằng chứng bác bỏ  giả thuyết H0\")\n",
         "else:\n",
-        "  print(\"Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\")"
+        "  print(\"Không có bằng chứng bác bỏ  giả thuyết H0\")"
       ],
       "metadata": {
         "colab": {
@@ -3373,7 +3373,7 @@
           "name": "stdout",
           "text": [
             "p_value: 0.3383376896381378\n",
-            "Không có bằng chứng bác bỏ giả thuyết mẫu lấy từ phân phối chuẩn\n"
+            "Không có bằng chứng bác bỏ  giả thuyết H0\n"
           ]
         }
       ]
