--- a/huong_dan_gia_dinh_ANOVA.ipynb
+++ b/huong_dan_gia_dinh_ANOVA.ipynb
@@ -189,10 +189,10 @@
       "source": [
         "Phát biểu giả thuyết \n",
         "\n",
-        "Giả thuyết null : \n",
-        "$$H_{0}: \\text{Phương sai của các nhóm không khác nhau} $$\n",
-        "Giả thuyết thay thế:\n",
-        "$$H_{a}:\\text{Phương sai của các nhóm khác nhau} $$"
+        "Giả thuyết null :Phương sai của các nhóm không khác nhau\n",
+        "$$H_{0}: \\text{ μ 1 = μ 2 = μ 3 =... = μ k} $$\n",
+        "Giả thuyết thay thế:Phương sai của các nhóm khác nhau\n",
+        "$$H_{a}:\\text{ μ 1 ≠ μ 2 ≠ μ 3 ≠... ≠ μ k} $$"
       ],
       "metadata": {
         "id": "Z3suA-A0n1vm"
